--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 05:05:04 2018</p>
+         Last Run: Tue Jul 17 06:05:30 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>E</td>
-                        <td>47</td>
+                        <td>ESE</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>48</td>
+                        <td>SE</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>39</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>E</td>
-                        <td>44</td>
+                        <td>ESE</td>
+                        <td>46</td>
                      </tr>
                   </tbody>
                </table>
@@ -107,7 +107,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "29",
-                 "27",
+                 "28",
                  "25"
                ]
              },
@@ -118,7 +118,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "29",
-                 "27",
+                 "28",
                  "25"
                ]
              }
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "29",
-                 "33",
-                 "40"
+                 "30",
+                 "34",
+                 "39"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "48",
-                 "44"
+                 "51",
+                 "52",
+                 "46"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 05:05:04 2018</p>
+         Last Run: Tue Jul 17 06:05:30 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -233,8 +233,8 @@
                         <td>Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>90</td>
-                        <td>57</td>
+                        <td>91</td>
+                        <td>58</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -386,7 +386,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "90",
+                 "91",
                  "55",
                  "55",
                  "32"
@@ -397,7 +397,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
+                 "58",
                  "58",
                  "62",
                  "66"
@@ -428,7 +428,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 05:05:04 2018</p>
+         Last Run: Tue Jul 17 06:05:30 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -453,31 +453,31 @@
                         <td>17</td>
                         <td>17</td>
                         <td>2</td>
-                        <td>56</td>
+                        <td>53</td>
                         <td>3</td>
                         <td>11</td>
                         <td>NW</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>3</td>
-                        <td>51</td>
+                        <td>2</td>
+                        <td>48</td>
                         <td>4</td>
                         <td>11</td>
                         <td>NW</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>9</td>
-                        <td>44</td>
+                        <td>5</td>
+                        <td>41</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NW</td>
@@ -485,27 +485,27 @@
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>46</td>
-                        <td>39</td>
-                        <td>7</td>
+                        <td>15</td>
+                        <td>38</td>
+                        <td>6</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>50</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>46</td>
-                        <td>40</td>
-                        <td>7</td>
+                        <td>15</td>
+                        <td>38</td>
+                        <td>6</td>
                         <td>11</td>
-                        <td>NW</td>
-                        <td>50</td>
+                        <td>WNW</td>
+                        <td>61</td>
                      </tr>
                   </tbody>
                </table>
@@ -622,10 +622,10 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "3",
-                 "9",
-                 "46",
-                 "46"
+                 "2",
+                 "5",
+                 "15",
+                 "15"
                ]
              },
              {
@@ -633,11 +633,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "51",
-                 "44",
-                 "39",
-                 "40"
+                 "53",
+                 "48",
+                 "41",
+                 "38",
+                 "38"
                ]
              },
              {
@@ -645,11 +645,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
-                 "7",
+                 "4",
+                 "6",
                  "9",
-                 "50",
-                 "50"
+                 "55",
+                 "61"
                ]
              }
            ]
