--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 10:05:25 2018</p>
+         Last Run: Tue Jul 17 11:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Partly Cloudy</td>
                         <td>29</td>
                         <td>29</td>
-                        <td>0</td>
-                        <td>29</td>
+                        <td>2</td>
+                        <td>28</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
-                        <td>43</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -48,9 +48,9 @@
                         <td>0</td>
                         <td>31</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>E</td>
-                        <td>41</td>
+                        <td>10</td>
+                        <td>ESE</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>39</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,7 +170,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
+                 "2",
                  "0",
                  "0"
                ]
@@ -180,7 +180,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "29",
+                 "28",
                  "31",
                  "38"
                ]
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
-                 "41",
-                 "39"
+                 "53",
+                 "55",
+                 "53"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 10:05:25 2018</p>
+         Last Run: Tue Jul 17 11:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -233,12 +233,12 @@
                         <td>Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>63</td>
-                        <td>57</td>
+                        <td>70</td>
+                        <td>56</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
-                        <td>83</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -246,11 +246,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>55</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
-                        <td>80</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -262,19 +262,19 @@
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>76</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>55</td>
                         <td>65</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>71</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -322,7 +322,7 @@
                  "21",
                  "21",
                  "20",
-                 "19"
+                 "20"
                ]
              },
              {
@@ -334,7 +334,7 @@
                  "21",
                  "21",
                  "20",
-                 "19"
+                 "20"
                ]
              }
            ]
@@ -386,7 +386,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "63",
+                 "70",
                  "55",
                  "55",
                  "55"
@@ -397,8 +397,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "57",
+                 "56",
+                 "56",
                  "61",
                  "65"
                ]
@@ -408,10 +408,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "83",
-                 "80",
-                 "76",
-                 "71"
+                 "81",
+                 "79",
+                 "75",
+                 "70"
                ]
              }
            ]
@@ -428,7 +428,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 10:05:25 2018</p>
+         Last Run: Tue Jul 17 11:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
