--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 11:05:25 2018</p>
+         Last Run: Tue Jul 17 12:05:14 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,7 +30,7 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>29</td>
                         <td>29</td>
                         <td>2</td>
@@ -38,19 +38,19 @@
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>53</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>Mostly Cloudy</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
                         <td>31</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>55</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>53</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -107,7 +107,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "29",
-                 "28",
+                 "29",
                  "26"
                ]
              },
@@ -118,7 +118,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "29",
-                 "28",
+                 "29",
                  "26"
                ]
              }
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "53",
-                 "55",
-                 "53"
+                 "62",
+                 "60",
+                 "58"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 11:05:25 2018</p>
+         Last Run: Tue Jul 17 12:05:14 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -230,15 +230,15 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Thunderstorm</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>70</td>
-                        <td>56</td>
+                        <td>57</td>
+                        <td>55</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>81</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -247,22 +247,22 @@
                         <td>21</td>
                         <td>55</td>
                         <td>56</td>
-                        <td>1</td>
-                        <td>11</td>
+                        <td>2</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>79</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>55</td>
-                        <td>61</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>E</td>
-                        <td>75</td>
+                        <td>ESE</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -270,11 +270,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>55</td>
-                        <td>65</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>70</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -321,7 +321,7 @@
                "data":[
                  "21",
                  "21",
-                 "20",
+                 "21",
                  "20"
                ]
              },
@@ -333,7 +333,7 @@
                "data":[
                  "21",
                  "21",
-                 "20",
+                 "21",
                  "20"
                ]
              }
@@ -386,7 +386,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "70",
+                 "57",
                  "55",
                  "55",
                  "55"
@@ -397,10 +397,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "55",
                  "56",
-                 "56",
-                 "61",
-                 "65"
+                 "58",
+                 "62"
                ]
              },
              {
@@ -408,10 +408,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "81",
-                 "79",
+                 "80",
                  "75",
-                 "70"
+                 "72",
+                 "69"
                ]
              }
            ]
@@ -428,7 +428,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 11:05:25 2018</p>
+         Last Run: Tue Jul 17 12:05:14 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -452,8 +452,8 @@
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>2</td>
-                        <td>53</td>
+                        <td>3</td>
+                        <td>54</td>
                         <td>3</td>
                         <td>11</td>
                         <td>NW</td>
@@ -464,10 +464,10 @@
                         <td>Clear</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>3</td>
+                        <td>4</td>
                         <td>47</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NW</td>
                         <td>6</td>
                      </tr>
@@ -476,8 +476,8 @@
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>3</td>
-                        <td>41</td>
+                        <td>4</td>
+                        <td>40</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NW</td>
@@ -490,22 +490,22 @@
                         <td>20</td>
                         <td>15</td>
                         <td>37</td>
-                        <td>6</td>
+                        <td>7</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>55</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>38</td>
-                        <td>6</td>
+                        <td>36</td>
+                        <td>7</td>
                         <td>10</td>
-                        <td>WNW</td>
-                        <td>61</td>
+                        <td>NW</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -621,9 +621,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
                  "3",
-                 "3",
+                 "4",
+                 "4",
                  "15",
                  "15"
                ]
@@ -633,11 +633,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
+                 "54",
                  "47",
-                 "41",
+                 "40",
                  "37",
-                 "38"
+                 "36"
                ]
              },
              {
@@ -648,8 +648,8 @@
                  "4",
                  "6",
                  "9",
-                 "55",
-                 "61"
+                 "41",
+                 "44"
                ]
              }
            ]
