--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 12:05:14 2018</p>
+         Last Run: Tue Jul 17 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>29</td>
                         <td>29</td>
                         <td>2</td>
-                        <td>28</td>
+                        <td>29</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>62</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>29</td>
                         <td>29</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>31</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>60</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>E</td>
-                        <td>58</td>
+                        <td>ESE</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,7 +171,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "0",
+                 "1",
                  "0"
                ]
              },
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "28",
+                 "29",
                  "31",
-                 "38"
+                 "39"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "69",
                  "62",
-                 "60",
-                 "58"
+                 "59"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 12:05:14 2018</p>
+         Last Run: Tue Jul 17 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -230,15 +230,15 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>57</td>
-                        <td>55</td>
-                        <td>2</td>
+                        <td>81</td>
+                        <td>56</td>
+                        <td>3</td>
                         <td>11</td>
-                        <td>ESE</td>
-                        <td>80</td>
+                        <td>SE</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -246,19 +246,19 @@
                         <td>21</td>
                         <td>21</td>
                         <td>55</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
-                        <td>75</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>55</td>
-                        <td>58</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -274,7 +274,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>69</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -321,7 +321,7 @@
                "data":[
                  "21",
                  "21",
-                 "21",
+                 "20",
                  "20"
                ]
              },
@@ -333,7 +333,7 @@
                "data":[
                  "21",
                  "21",
-                 "21",
+                 "20",
                  "20"
                ]
              }
@@ -386,7 +386,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "57",
+                 "81",
                  "55",
                  "55",
                  "55"
@@ -397,9 +397,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
                  "56",
-                 "58",
+                 "57",
+                 "59",
                  "62"
                ]
              },
@@ -408,10 +408,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
                  "75",
+                 "63",
                  "72",
-                 "69"
+                 "70"
                ]
              }
            ]
@@ -428,7 +428,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 12:05:14 2018</p>
+         Last Run: Tue Jul 17 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -453,9 +453,9 @@
                         <td>17</td>
                         <td>17</td>
                         <td>3</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>3</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NW</td>
                         <td>4</td>
                      </tr>
@@ -467,7 +467,7 @@
                         <td>4</td>
                         <td>47</td>
                         <td>4</td>
-                        <td>11</td>
+                        <td>8</td>
                         <td>NW</td>
                         <td>6</td>
                      </tr>
@@ -479,7 +479,7 @@
                         <td>4</td>
                         <td>40</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NW</td>
                         <td>9</td>
                      </tr>
@@ -489,9 +489,9 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>7</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NW</td>
                         <td>41</td>
                      </tr>
@@ -504,8 +504,8 @@
                         <td>36</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>NW</td>
-                        <td>44</td>
+                        <td>WNW</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -633,10 +633,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
+                 "53",
                  "47",
                  "40",
-                 "37",
+                 "36",
                  "36"
                ]
              },
@@ -649,7 +649,7 @@
                  "6",
                  "9",
                  "41",
-                 "44"
+                 "43"
                ]
              }
            ]
